samples/_failures_safe/1761261355_acb83e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_02584afa.c: In function ‘tokenize’:
./samples/SAFE/__tmp_02584afa.c:166:13: error: expected expression at end of input
  166 |             } else
      |             ^
./samples/SAFE/__tmp_02584afa.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_02584afa.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_02584afa.c:166:13: error: expected declaration or statement at end of input
